# skill-manager

./: .gitignore  CHANGELOG.md  CLAUDE.md  Dockerfile.server  README.md  RunTests.java  ServerObservabilityContractTest.java  SkillManager.java  SkillManagerServer.java  docker-compose-ghcr.yml  docker-compose.yml  release-please-config.json  run-local.sh  skill-manager  skill-manager-server  skill-project.toml
.github/scripts/: collect-test-graph-diagnostics.sh
.github/workflows/: ci.yml  lint-pr-title.yml  release.yml
examples/hello-doc-repo/: skill-manager.toml
scripts/: regenerate_spec_cases.py
skill-dev-skill/: .gitignore  README.md  SKILL.md  pyproject.toml  skill-manager.toml
skill-dev-skill/skill-scripts/: install.sh
skill-dev-skill/src/skill_dev/: __init__.py  cli.py
skill-dev-skill/tests/: test_cli.py
skill-manager-skill/: SKILL.md  skill-manager.toml
skill-publisher-skill/: SKILL.md  skill-manager.toml
test_graph/: build-logic  build.gradle.kts  sdk
ticket/: agent-docs-as-agent-unit.md  auth.md  bindings.md  context-error.md  documentations.md  env-overlay.md  env.md  error-handling.md  gemini.md  harness-templates.md  install-from-file.md  lock-divergence-reporting.md  locking.md  mcp-hosting.md  onboard-bugs.md  pipeline.md  plan-bugs.md  plugin-marketplace.md  references.md  skill-cost.md  skill-manager-skill-virtual-mcp-gateway-prompt.md  skill-market.md  skill-search-continual-learning.md  stripe-accounts.md  sync-skill.md  uninstall.md  upgrade-cmd.md  versioning.md
virtual-mcp-gateway/: README.md  pyproject.toml  sample-config.json
(+1070 files in other folders)
