[project]
name = "skill-dev"
version = "0.1.0"
description = "Development worktree bridge for installed skill-manager skills and plugins."
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[project.scripts]
skill-dev = "skill_dev.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
package = true

